<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:onClick="video"
            android:icon="@drawable/ic_ondemand_video_black_24dp"
            android:title="@string/menu_video" />
        <item

              android:onClick="lectureNotes"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_lecture" />
        <item
            android:onClick="question"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/menu_Past_Papers" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:onClick="Write"
            android:title="Write Notes" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_timetable" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:onClick="communityBlog"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/menu_community" />


            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_shareNotes"
                android:icon="@drawable/ic_present_to_all_black_24dp"
                android:title="@string/menu_upload" />
        </menu>
    </item>

</menu>
